portfolio/src/App.scss
*{
  box-sizing: border-box;
}
.App {
  background-image: url('./images/image2vector.svg');
  background-color: #cccccc;
  background-repeat: no-repeat, repeat;
  background-size: cover;
  min-height: 100vh;

}



.App-header {
  background-color: #282c34;
  min-height: 600px;
  margin-left: 2%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  font-size: 2rem;
  color: white;
}
.container{
  background-color: #282c34;
  margin: 0 auto;
  max-width: 1300px;
}
button{
  background: white;
  border: 2px solid white;
  padding: 10px;
  border-radius:5px;
  
}
button:hover{
    background: #282c34;
    color: white;

  }

// # project styling
.projects{
  margin: 0 2%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  color: white;
  .item{
    border-radius: 12px;
    width:46%;
    background: #363e3f;
    margin-bottom: 50px;
    img{
      border-bottom: 2px solid #282c34;
      width: 100%;
    }
    .info{
      display: flex;
      flex-direction: column;
      justify-content: flex-start;
      padding: 0 30px 30px;
      margin-bottom: 50px;
      button{
        align-self: flex-end;
      }

    }

  }
}

